# t2v-sign-language

./: .gitignore  Makefile  README.md  pyproject.toml  pyproject1.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
t2v_sign_language/: check_status_transcribe.py  dataset.py  job_id.txt  parse_transcript.py  transcribe.py  video_urls.txt
