[project]
name = "t2v-sign-language"
version = "0.1.0"
description = "A way to translate text to video of sign language and vice versa using the latest generative AI capabilities"
authors = [
    { name = "Sam Fareez", email = "vsefareez@gmail.com" }
]
dependencies = [
    "black",
    "flake8",
    "isort",
    "mkdocs",
    "python-dotenv",
    "jupyter>=1.1.1",
    "polars>=1.21.0",
    "moviepy>=2.1.2",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "speechmatics-python>=3.0.2",
    "ipynbname>=2024.1.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["t2v_sign_language"]

[tool.rye.scripts]
transcribe = "python t2v_sign_language/transcribe.py"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["t2v_sign_language"]
force_sort_within_sections = true
